padding, display and margins

--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -13,7 +13,34 @@
   </head>
   <body>
 
-    <h1>Hello, world!</h1>
+    <div class="container" style="margin-top: 300px">
+
+
+      <!--<section class="row justify-content-between" style="height: 200px"></section>-->
+      <section class="row justify-content-center">
+        <div class="col"></div>
+        <div class="col-6">
+        
+        <h1>Table of content</h1>
+
+        <ul>
+
+          <a href="bg-colors.html"><li style="font-size: xx-large;">Bg colors</li></a>
+          <a href="containers_and_rows.html"><li style="font-size: xx-large;">Containers and rows</li></a>
+          <a href="media_breakpoints.html"><li style="font-size: xx-large;">Media breakpoints</li></a>
+          <a href="grid_system.html"><li style="font-size: xx-large;">Grid system</li></a>
+          <a href="aligment_and_offsets.html"><li style="font-size: xx-large;">Aligments and offsets</li></a>
+          <a href="padding_display_and_margins.html"><li style="font-size: xx-large;">Padding display and margins</li></a>
+
+         </ul>
+
+        </div>
+
+        <div class="col"></div>
+
+      </section>
+
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
