--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -31,6 +31,7 @@
           <a href="grid_system.html"><li style="font-size: xx-large;">Grid system</li></a>
           <a href="aligment_and_offsets.html"><li style="font-size: xx-large;">Aligments and offsets</li></a>
           <a href="padding_display_and_margins.html"><li style="font-size: xx-large;">Padding display and margins</li></a>
+          <a href="flexbox.html"><li style="font-size: xx-large;">Flexbox / Flexible box</li></a>
 
          </ul>
 
