--- a/bootstrap-cdn/precoded_navbar_start.html
+++ b/bootstrap-cdn/precoded_navbar_start.html
@@ -51,6 +51,17 @@
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Link1</a>
+              <div class="dropdown-menu" aria-labelledby="navDropdown">
+                <a class="dropdown-item" href="#">Sub-Link 1</a>
+                <a class="dropdown-item" href="#">Sub-Link 2</a>
+                  <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Sub-Link 3</a>
+              </div>
+            </li>
+
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#link1">Link1</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#link2">Link2</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#link3">Link3</a></li>
