--- a/bootstrap-cdn/precoded_navbar_start.html
+++ b/bootstrap-cdn/precoded_navbar_start.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
     <title>Bootstrap Precoded Navbar</title>
@@ -115,6 +116,87 @@
         </div>
       </div>
     </header>
+
+
+
+    <div class="container m-5 col-auto">
+      <p>* Section 1 </p>
+
+      <ul class="nav nav-tabs justify-content-center">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Hearts Dropdown</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">The Queen</a>
+                <a class="dropdown-item" href="#">The King</a>
+                <a class="dropdown-item" href="#">The Jack</a>
+              </div>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link active">Alice</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">The Hatter</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">Dormouse</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">March Hare</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">Dinah</a>
+        </li>
+      </ul>
+
+    </div>
+
+
+    <div class="container m-5 col-auto">
+      <p>* Section 2 </p>
+
+      <ul class="nav nav-pills flex-column">
+        <li class="nav-item">
+            <a href="#" class="nav-link active">Alice</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">The Hatter</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">Dormouse</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">March Hare</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">Dinah</a>
+        </li>
+      </ul>
+
+    </div>
+
+
+    <div class="container m-5 col-auto">
+      <p>* Section 3 </p>
+
+      <ul class="nav nav-pills nav-fill">
+        <li class="nav-item">
+            <a href="#" class="nav-link active">Alice</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">The Hatter</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">Dormouse</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">March Hare</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">Dinah</a>
+        </li>
+      </ul>
+
+    </div>
 
 
 
