--- a/bootstrap-cdn/precoded_navbar_start.html
+++ b/bootstrap-cdn/precoded_navbar_start.html
@@ -34,9 +34,11 @@
 
 <!-- 
     * the navbar will expand when the screen is with large width
-    * navbar-dark is to work on dark background
+    * navbar-dark is to work/be visible on dark background
+    * navbar-light is to work/be visible on light background
+    * bg-dark makes the background of the navbar dark color; the build-in options for colors are dark/primary/success/info
 -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav"> 
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-info" id="mainNav"> 
 
     <div class="container">
 
