adding more info in section general info

--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -18,8 +18,8 @@
 
       <!--<section class="row justify-content-between" style="height: 200px"></section>-->
       <section class="row justify-content-center">
-        <div class="col"></div>
-        <div class="col-6">
+        <div class="col-4"></div>
+        <div class="col-4">
         
         <h1>Table of content</h1>
 
@@ -38,7 +38,7 @@
 
         </div>
 
-        <div class="col"></div>
+        <div class="col-4"></div>
 
       </section>
 
