--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -33,6 +33,7 @@
           <a href="padding_display_and_margins.html"><li style="font-size: xx-large;">Padding display and margins</li></a>
           <a href="flexbox.html"><li style="font-size: xx-large;">Flexbox / Flexible box</li></a>
           <a href="precoded_navbar_start.html"><li style="font-size: xx-large;">Precoded navbar start</li></a>
+          <a href="search_box.html"><li style="font-size: xx-large;">Search box in navbar</li></a>
 
          </ul>
 
