setting mg-lg to nav items

--- a/bootstrap-cdn/search_box.html
+++ b/bootstrap-cdn/search_box.html
@@ -55,7 +55,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
 
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown my-lg-2">
               <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Link1</a>
               <div class="dropdown-menu" aria-labelledby="navDropdown">
                 <a class="dropdown-item" href="#">Sub-Link 1</a>
@@ -65,11 +65,11 @@
               </div>
             </li>
 
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#link1">Link1</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#link2">Link2</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#link3">Link3</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#link4">Link4</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#link5">Link5</a></li>
+            <li class="nav-item my-lg-2"><a class="nav-link js-scroll-trigger" href="#link1">Link1</a></li>
+            <li class="nav-item my-lg-2"><a class="nav-link js-scroll-trigger" href="#link2">Link2</a></li>
+            <li class="nav-item my-lg-2"><a class="nav-link js-scroll-trigger" href="#link3">Link3</a></li>
+            <li class="nav-item my-lg-2"><a class="nav-link js-scroll-trigger" href="#link4">Link4</a></li>
+            <li class="nav-item my-lg-2"><a class="nav-link js-scroll-trigger" href="#link5">Link5</a></li>
 
             <form class="form-inline my-2 my-lg-0 "> <!-- form-line keeps everything in the form in ne line -->
                 <input class="form-control my-sm-2" type="text" placeholder="Search">
