--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -34,6 +34,7 @@
           <a href="flexbox.html"><li style="font-size: xx-large;">Flexbox / Flexible box</li></a>
           <a href="precoded_navbar_start.html"><li style="font-size: xx-large;">Precoded navbar start</li></a>
           <a href="search_box.html"><li style="font-size: xx-large;">Search box in navbar</li></a>
+          <a href="breadcrumbs.html"><li style="font-size: xx-large;">Breadcrumbs</li></a>
 
          </ul>
 
