fixing a comment in the code

--- a/bootstrap-cdn/padding_display_and_margins.html
+++ b/bootstrap-cdn/padding_display_and_margins.html
@@ -28,7 +28,7 @@
             <div class="col bg-info">4</div>
             <!-- MT is margin-top, where 1 is 25%, 2 is 50%, 3 is 100%, 4 is 150%, 5 is 300%
                  MB is margin-bottom, where 1 is 25%, 2 is 50%, 3 is 100%, 4 is 150%, 5 is 300%
-                 there is alo MB, ML, MR, MX, MY, blank ;
+                 there is alo M, MB, ML, MR, MX, MY, blank ;
                 RESPECTIVELY is for padding : PT, PB, PL, PR, PX, PY -->
             <div class="col bg-primary text-light text-justify mt-1">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
