--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-    <div class="container" style="margin-top: 300px">
+    <div class="container" style="margin-top: 50px">
 
 
       <!--<section class="row justify-content-between" style="height: 200px"></section>-->
@@ -21,21 +21,30 @@
         <div class="col-4"></div>
         <div class="col-4">
         
-        <h1>Table of content</h1>
+        <h2>Table of content</h2>
 
         <ul>
 
-          <a href="bg-colors.html"><li style="font-size: xx-large;">Bg colors</li></a>
-          <a href="containers_and_rows.html"><li style="font-size: xx-large;">Containers and rows</li></a>
-          <a href="media_breakpoints.html"><li style="font-size: xx-large;">Media breakpoints</li></a>
-          <a href="grid_system.html"><li style="font-size: xx-large;">Grid system</li></a>
-          <a href="aligment_and_offsets.html"><li style="font-size: xx-large;">Aligments and offsets</li></a>
-          <a href="padding_display_and_margins.html"><li style="font-size: xx-large;">Padding display and margins</li></a>
-          <a href="flexbox.html"><li style="font-size: xx-large;">Flexbox / Flexible box</li></a>
-          <a href="precoded_navbar_start.html"><li style="font-size: xx-large;">Precoded navbar start and other navigations</li></a>
-          <a href="search_box.html"><li style="font-size: xx-large;">Search box in navbar</li></a>
-          <a href="breadcrumbs.html"><li style="font-size: xx-large;">Breadcrumbs</li></a>
-          <a href="pagination.html"><li style="font-size: xx-large;">Pagination</li></a>
+          <a href="bg-colors.html"><li>Bg colors</li></a>
+          <a href="containers_and_rows.html"><li>Containers and rows</li></a>
+          <a href="media_breakpoints.html"><li>Media breakpoints</li></a>
+          <a href="grid_system.html"><li>Grid system</li></a>
+          <a href="aligment_and_offsets.html"><li>Aligments and offsets</li></a>
+          <a href="padding_display_and_margins.html"><li>Padding display and margins</li></a>
+          <a href="flexbox.html"><li>Flexbox / Flexible box</li></a>
+          <a href="precoded_navbar_start.html"><li>Precoded navbar start and other navigations</li></a>
+          <a href="search_box.html"><li>Search box in navbar</li></a>
+          <a href="breadcrumbs.html"><li">Breadcrumbs</li></a>
+          <a href="pagination.html"><li">Pagination</li></a>
+          <a href="#">
+            <li>
+            Sticky navbars
+              <ul>
+                <a href="sticky_navbar_transparent.html"><li>Transperent stickey navbar</li></a>
+                <a href="sticky_navbar_animated.html"><li>Animated stickey navbar</li></a>
+              </ul>
+            </li>
+          </a>
 
          </ul>
 
