--- a/bootstrap-cdn/sticky_navbar_transparent.html
+++ b/bootstrap-cdn/sticky_navbar_transparent.html
@@ -13,6 +13,10 @@
 
     <style>
 
+        .heightAdder{
+            height: 1000px;
+        }
+
       header.masthead{
         text-align: center;
         color:white;
@@ -21,12 +25,12 @@
         background-attachment: scroll;
         background-position: center center;
         background-size: cover;
-        width: 100vw;
-        height: 100vh;
+
+        padding-top: 300px;
+        padding-bottom: 200px;
       }
 
-      #mainNav{background-color: #262626}
-
+    
 
     </style>
 
@@ -41,7 +45,7 @@
     * navbar-light is to work/be visible on light background
     * bg-dark makes the background of the navbar dark color; the build-in options for colors are dark/primary/success/info
 -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top " id="mainNav"> 
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav"> 
 
     <div class="container">
 
@@ -49,7 +53,7 @@
           * navbar-brand is the logo 
           * js-scroll-trigger will open and closes the menu when the screen is smaller 
           * fa - fontawesome
-          * navbar-toggler - trigger the js menu when the screen is smaller
+          * navbar-toggler - trigger the js menu whn the screen is smaller
           * navbar-toggler-right - will set the button on small screen on the right side
       -->
         <a class="navbar-brand js-scroll-trigger" href="#top">Navbar</a> 
@@ -58,7 +62,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
 
-            <li class="nav-item dropdown my-lg-2">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Link1</a>
               <div class="dropdown-menu" aria-labelledby="navDropdown">
                 <a class="dropdown-item" href="#">Sub-Link 1</a>
@@ -68,18 +72,11 @@
               </div>
             </li>
 
-            <li class="nav-item my-lg-2"><a class="nav-link js-scroll-trigger" href="#link1">Link1</a></li>
-            <li class="nav-item my-lg-2"><a class="nav-link js-scroll-trigger" href="#link2">Link2</a></li>
-            <li class="nav-item my-lg-2"><a class="nav-link js-scroll-trigger" href="#link3">Link3</a></li>
-            <li class="nav-item my-lg-2"><a class="nav-link js-scroll-trigger" href="#link4">Link4</a></li>
-            <li class="nav-item my-lg-2"><a class="nav-link js-scroll-trigger" href="#link5">Link5</a></li>
-
-            <form class="form-inline my-2 my-lg-0 "> <!-- form-line keeps everything in the form in ne line -->
-                <input class="form-control my-sm-2" type="text" placeholder="Search">
-                <!-- my-2 my-sm-0 - when the screen is small the margin Y to be 0; in every other case will be 2 -->
-                <button class="btn btn-outline-danger my-2 my-sm-0 ml-2">Search</button>
-            </form>
-
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#link1">Link1</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#link2">Link2</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#link3">Link3</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#link4">Link4</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#link5">Link5</a></li>
           </ul>
         </div>
 
@@ -131,85 +128,11 @@
 
 
 
-    <div class="container m-5 col-auto">
-      <p>* Section 1 </p>
 
-      <ul class="nav nav-tabs justify-content-center">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Hearts Dropdown</a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">The Queen</a>
-                <a class="dropdown-item" href="#">The King</a>
-                <a class="dropdown-item" href="#">The Jack</a>
-              </div>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link active">Alice</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">The Hatter</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">Dormouse</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">March Hare</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">Dinah</a>
-        </li>
-      </ul>
+    <!-- Empty space for something we can scroll -->
+    <div class="heightAdder"></div>
 
-    </div>
-
-
-    <div class="container m-5 col-auto">
-      <p>* Section 2 </p>
-
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-            <a href="#" class="nav-link active">Alice</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">The Hatter</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">Dormouse</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">March Hare</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">Dinah</a>
-        </li>
-      </ul>
-
-    </div>
-
-
-    <div class="container m-5 col-auto">
-      <p>* Section 3 </p>
-
-      <ul class="nav nav-pills nav-fill">
-        <li class="nav-item">
-            <a href="#" class="nav-link active">Alice</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">The Hatter</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">Dormouse</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">March Hare</a>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">Dinah</a>
-        </li>
-      </ul>
-
-    </div>
-
+   
 
 
     <!-- Optional JavaScript -->
@@ -217,5 +140,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    
   </body>
 </html>
