--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Bootstrap course</title>
 
   </head>
   <body>
@@ -34,8 +34,8 @@
           <a href="flexbox.html"><li>Flexbox / Flexible box</li></a>
           <a href="precoded_navbar_start.html"><li>Precoded navbar start and other navigations</li></a>
           <a href="search_box.html"><li>Search box in navbar</li></a>
-          <a href="breadcrumbs.html"><li">Breadcrumbs</li></a>
-          <a href="pagination.html"><li">Pagination</li></a>
+          <a href="breadcrumbs.html"><li>Breadcrumbs</li></a>
+          <a href="pagination.html"><li>Pagination</li></a>
           <a href="#">
             <li>
             Sticky navbars
@@ -45,6 +45,8 @@
               </ul>
             </li>
           </a>
+          <a href="headlines.html"><li>Headlines</li></a>
+
 
          </ul>
 
