fixing title and file name of precoded navbar

--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -32,7 +32,7 @@
           <a href="aligment_and_offsets.html"><li>Aligments and offsets</li></a>
           <a href="padding_display_and_margins.html"><li>Padding display and margins</li></a>
           <a href="flexbox.html"><li>Flexbox / Flexible box</li></a>
-          <a href="precoded_navbar_start.html"><li>Precoded navbar start and other navigations</li></a>
+          <a href="precoded_navbar.html"><li>Precoded navbar and other navigations</li></a>
           <a href="search_box.html"><li>Search box in navbar</li></a>
           <a href="breadcrumbs.html"><li>Breadcrumbs</li></a>
           <a href="pagination.html"><li>Pagination</li></a>
