--- a/bootstrap-cdn/headlines.html
+++ b/bootstrap-cdn/headlines.html
@@ -13,7 +13,60 @@
   </head>
   <body>
 
+    <div class="container">
+        <p>* Section 1</p>
 
+        <h1 class="h1">h1 - Man Bites Dog</h1>
+        <h2 class="h1">h2 - Camouflaged Army Vehicle Disappears</h2>
+        <h3 class="h1">h3 - Woman Missing Since She Got Lost</h3>
+        <h4 class="h1">h4 - Safety Meeting Ends in Accident</h4>
+        <h5 class="h1">h5- Attorney Accidentally Sues Herself</h5>
+        <h6 class="h1">h6- Woman Still Alive Hours Before She Died</h6>
+    </div>
+
+    <hr>
+
+    <div class="container">
+        <p>* Section 2</p>
+
+        <h1 class="text-lowercase">h1 with lowercase - Man Bites Dog</h1>
+        <h1 class="text-uppercase">h1 with uppercase - Man Bites Dog</h1>
+        <h1 class="text-capitalize">h1 with capitalize - Man Bites Dog</h1>
+    </div>
+
+    <hr>
+
+    <div class="container">
+        <p>* Section 3</p>
+
+        <h3> Man Bites Dog
+            <!-- text-mudet changes the color to light gray -->
+            <small class="text-muted"> Dog Bites Man</small>
+        </h3>
+    </div>
+
+    <hr>
+
+    <div class="container">
+        <p>* Section 4</p>
+        <!-- display-X are larger sizes avalible from bootstrap 4 -->
+        <h1 class="display-1"> Man Bites Dog</h1>
+        <h1 class="display-2"> Man Bites Dog</h1>
+        <h1 class="display-3"> Man Bites Dog</h1>
+        <h1 class="display-4"> Man Bites Dog</h1>
+    </div>
+
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    -->
 
   </body>
 </html>
