--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -46,6 +46,7 @@
             </li>
           </a>
           <a href="headlines.html"><li>Headlines</li></a>
+          <a href="text_colors.html"><li>Text colors</li></a>
 
 
          </ul>
