paragrapsh and blockquotes

--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -47,6 +47,7 @@
           </a>
           <a href="headlines.html"><li>Headlines</li></a>
           <a href="text_colors.html"><li>Text colors</li></a>
+          <a href="paragraphs_and_blockquotes.html"><li>Paragraphs and Blockquotes</li></a>
 
 
          </ul>
