--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -48,6 +48,7 @@
           <a href="headlines.html"><li>Headlines</li></a>
           <a href="text_colors.html"><li>Text colors</li></a>
           <a href="paragraphs_and_blockquotes.html"><li>Paragraphs and Blockquotes</li></a>
+          <a href="inline_elements.html"><li>Inline elements</li></a>
 
 
          </ul>
