--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -49,6 +49,7 @@
           <a href="text_colors.html"><li>Text colors</li></a>
           <a href="paragraphs_and_blockquotes.html"><li>Paragraphs and Blockquotes</li></a>
           <a href="inline_elements.html"><li>Inline elements</li></a>
+          <a href="lists.html"><li>Lists</li></a>
 
 
          </ul>
