list with javascript behavior

--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -49,7 +49,15 @@
           <a href="text_colors.html"><li>Text colors</li></a>
           <a href="paragraphs_and_blockquotes.html"><li>Paragraphs and Blockquotes</li></a>
           <a href="inline_elements.html"><li>Inline elements</li></a>
-          <a href="lists.html"><li>Lists</li></a>
+          <a href="#">
+          <li>
+            Lists
+              <ul>
+                <a href="lists.html"><li>Basic lists</li></a>
+                <a href="list_group_with_Javascript_behavior.html"><li>Lists with Javascript behavior</li></a>
+              </ul>
+            </li>
+          </a>
 
 
          </ul>
