--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -58,6 +58,8 @@
               </ul>
             </li>
           </a>
+          <a href="responsive_floats.html"><li>Responsive floats</li></a>
+
 
 
          </ul>
