fixe types and sticky elemtns

--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -59,6 +59,7 @@
             </li>
           </a>
           <a href="responsive_floats.html"><li>Responsive floats</li></a>
+          <a href="fixed_type.html"><li>Fixed type and justify text</li></a>
 
 
 
