--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -60,7 +60,7 @@
           </a>
           <a href="responsive_floats.html"><li>Responsive floats</li></a>
           <a href="fixed_type.html"><li>Fixed type and justify text</li></a>
-
+          <a href="buttons.html"><li>Buttons</li></a>
 
 
          </ul>
