--- a/bootstrap-cdn/buttons.html
+++ b/bootstrap-cdn/buttons.html
@@ -179,10 +179,38 @@
 
             <hr class="m-5">
 
-            Read Alice in Wonderland
-            Chapter 1
-            Chapter 2
-            Chapter 3
+                <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                    Alice in Wonderland
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Chapter 1</a></li>
+                  <li><a class="dropdown-item" href="#">Chapter 2</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Chapter 3</a></li>
+                </ul>
+
+            <hr class="m-5">
+
+            
+            <div class="input-group mb-3">
+
+                <button class="btn btn-secondary" type="button">
+                    About Lewis Carroll
+                </button>
+
+                <!-- data-bs-toggle trigers the javascript -->
+                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                    Read Alice in Wonderland
+                </button>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">Table ot Content</a>
+                  <li><hr class="dropdown-divider"></li>
+                  <a class="dropdown-item" href="#">Chapter 1</a>
+                  <a class="dropdown-item" href="#">Chapter 2</a>
+                  <a class="dropdown-item" href="#">Chapter 3</a>
+                </div>
+
+            </div>
 
             <hr class="m-5">
 
