--- a/bootstrap-cdn/buttons.html
+++ b/bootstrap-cdn/buttons.html
@@ -239,6 +239,32 @@
 
 <hr>
 
+<div class="container">
+    <div class="mt-5">
+        <h3>Section 5 / Button toolbar</h3>
+            <div class="btn-toolbar">
+
+                <div class="btn-group m-2">
+                    <button class="btn btn-primary" type="button">Alice</button>
+                    <button class="btn btn-primary" type="button">Dinah</button>
+                    <button class="btn btn-primary" type="button">White Rabbit</button>
+                </div>
+                
+                <div class="btn-group m-2">
+                    <button class="btn btn-primary" type="button">Mad Hatter</button>
+                    <button class="btn btn-primary" type="button">Dormouse</button>
+                    <button class="btn btn-primary" type="button">March Hare</button>
+                </div>
+
+                <div class="btn-group m-2">
+                    <button class="btn btn-primary" type="button">Queen of Hearts</button>
+                    <button class="btn btn-primary" type="button">King of Hearts</button>
+                </div>
+
+            </div>
+    </div>
+</div>
+
 
 
 
