--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -61,6 +61,7 @@
           <a href="responsive_floats.html"><li>Responsive floats</li></a>
           <a href="fixed_type.html"><li>Fixed type and justify text</li></a>
           <a href="buttons.html"><li>Buttons</li></a>
+          <a href="alerts.html"><li>Alerts</li></a>
 
 
          </ul>
