--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -62,6 +62,7 @@
           <a href="fixed_type.html"><li>Fixed type and justify text</li></a>
           <a href="buttons.html"><li>Buttons</li></a>
           <a href="alerts.html"><li>Alerts</li></a>
+          <a href="badges.html"><li>Badges</li></a>
 
 
          </ul>
