images and image figures

--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -63,6 +63,7 @@
           <a href="buttons.html"><li>Buttons</li></a>
           <a href="alerts.html"><li>Alerts</li></a>
           <a href="badges.html"><li>Badges</li></a>
+          <a href="images.html"><li>Images and Image Figures</li></a>
 
 
          </ul>
