footer and fontawasome

--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -64,6 +64,7 @@
           <a href="alerts.html"><li>Alerts</li></a>
           <a href="badges.html"><li>Badges</li></a>
           <a href="images.html"><li>Images and Image Figures</li></a>
+          <a href="font_awasome.html"><li>Footer and Font Awasome</li></a>
 
 
          </ul>
