cards, cards group, cards colum

--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -65,6 +65,7 @@
           <a href="badges.html"><li>Badges</li></a>
           <a href="images.html"><li>Images and Image Figures</li></a>
           <a href="font_awasome.html"><li>Footer and Font Awasome</li></a>
+          <a href="cards.html"><li>Cards</li></a>
 
 
          </ul>
