--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -67,6 +67,7 @@
           <a href="font_awasome.html"><li>Footer and Font Awasome</li></a>
           <a href="cards.html"><li>Cards</li></a>
           <a href="tables.html"><li>Tables</li></a>
+          <a href="borders.html"><li>Borders</li></a>
 
 
          </ul>
