--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -68,6 +68,7 @@
           <a href="cards.html"><li>Cards</li></a>
           <a href="tables.html"><li>Tables</li></a>
           <a href="borders.html"><li>Borders</li></a>
+          <a href="media_objects.html"><li>Media Objects</li></a>
 
 
          </ul>
