--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -69,6 +69,7 @@
           <a href="tables.html"><li>Tables</li></a>
           <a href="borders.html"><li>Borders</li></a>
           <a href="media_objects.html"><li>Media Objects</li></a>
+          <a href="forms.html"><li>Forms</li></a>
 
 
          </ul>
