--- a/bootstrap-cdn/media_breakpoints.html
+++ b/bootstrap-cdn/media_breakpoints.html
@@ -11,13 +11,10 @@
     <title>Media breakpoints</title>
 
     <style>
-        @media(min-width: 576px){body{background:cyan;}
-        @media(min-width: 768px){body{background:lightblue;}
-        @media(min-width: 992px){body{background:lightgreen;}
-        @media(min-width: 1200px){body{background:lightyellow;}
-        @media(max-width: 575px){body{background:gray;}
-        }
-
+        @media(min-width: 576px){body{background:cyan;}}
+        @media(min-width: 768px){body{background:lightblue;}}
+        @media(min-width: 992px){body{background:lightgreen;}}
+        @media(min-width: 1200px){body{background:lightyellow;}}
     </style>
 
   </head>
