--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -71,6 +71,7 @@
           <a href="media_objects.html"><li>Media Objects</li></a>
           <a href="forms.html"><li>Forms</li></a>
           <a href="jumbotron.html"><li>Jumbotron</li></a>
+          <a href="carousels.html"><li>Carousels</li></a>
 
 
          </ul>
