--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -72,6 +72,7 @@
           <a href="forms.html"><li>Forms</li></a>
           <a href="jumbotron.html"><li>Jumbotron</li></a>
           <a href="carousels.html"><li>Carousels</li></a>
+          <a href="collapse.html"><li>Collapse</li></a>
 
 
          </ul>
