--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -73,6 +73,7 @@
           <a href="jumbotron.html"><li>Jumbotron</li></a>
           <a href="carousels.html"><li>Carousels</li></a>
           <a href="collapse.html"><li>Collapse</li></a>
+          <a href="accordian.html"><li>Accordian</li></a>
 
 
          </ul>
