--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -74,6 +74,7 @@
           <a href="carousels.html"><li>Carousels</li></a>
           <a href="collapse.html"><li>Collapse</li></a>
           <a href="accordian.html"><li>Accordian</li></a>
+          <a href="tooltips.html"><li>Tooltips</li></a>
 
 
          </ul>
