--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -75,6 +75,7 @@
           <a href="collapse.html"><li>Collapse</li></a>
           <a href="accordian.html"><li>Accordian</li></a>
           <a href="tooltips.html"><li>Tooltips</li></a>
+          <a href="modal.html"><li>Modal</li></a>
 
 
          </ul>
