--- a/bootstrap-cdn/index.html
+++ b/bootstrap-cdn/index.html
@@ -76,6 +76,8 @@
           <a href="accordian.html"><li>Accordian</li></a>
           <a href="tooltips.html"><li>Tooltips</li></a>
           <a href="modal.html"><li>Modal</li></a>
+          <a href="popovers.html"><li>Popovers</li></a>
+          <a href="scrollspy.html"><li>Scrollspy</li></a>
 
 
          </ul>
